2008-06-11  Jonathan Pobst  <monkey@jpobst.com>

	* FontDialog.cs: Forward ListBox keyboard events to the ListBox
	instead of trying to duplicate the code.
	* ListBox.cs: Make method internal so we can send keyboard events.
	[Fixes bug #398344]
	
2008-06-11  Jonathan Pobst  <monkey@jpobst.com>

	* TextBoxBase.cs: When pasting and checking the max length,
	subtract the selected text length (the text we will be replacing) from
	the document length.
	* TextControl.cs: Ensure every character insertion is reflected in
	charcount, so max length will work properly.
	[Fixes bug #398605]

2008-06-11  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Ensure scrollbars are updated when a single
	column listbox with an already set top-index is created.
	[Fixes bug #398342]

2008-06-11  Jonathan Pobst  <monkey@jpobst.com>

	* FontDialog.cs: Typing in the font/style textboxes should search
	the list boxes case-insensitively.  [Fixes bug #398343]

2008-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeWin32Classic.cs: Managed window title bar layout now uses actual
	widths of icon and buttons instead of hard coded values.

2008-06-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: When SelectionMode is None, clicking an item should move focus
	as well as generating a SelectedIndexChanged event, just like .Net does
	-surprise-.
	Fixes #398345.

2008-06-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: When navigating items visually, use FocusedItem as the
	reference point instead of SelectedIndex, since even in
	SelectionMode.None we need to support navigation, and in that case we
	just can't use SelectedIndex.
	Fixes part of #398345.

2008-06-10  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Make a SetBoundsInternal that avoids the new
	SetBounds code.
	* ComboBox.cs, Form.cs, ListBox.cs, ScrollableControl.cs: Use
	SetBoundsInternal instead of SetBoundsCoreInternal.

2008-06-10  Ivan N. Zlatev  <contact@i-nz.net>
